# hakkaton

./: jwt_handler.py  main.py  pyproject.toml  requirements.txt
account/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
account/migrations/: 0001_initial.py
account/templates/: email.html
cart/: admin.py  forms.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_alter_cartitem_product_alter_orderitem_product_and_more.py
cart/templates/: add_to_cart.html  checkout.html  order_success.html  view_cart.html
config/: celery.py  settings.py  urls.py
review/: models.py  permission.py  serializers.py  urls.py  views.py
shop/: admin.py  models.py  serializers.py  urls.py  views.py
shop/migrations/: 0001_initial.py
